# usplasi_vo_evaluation

./: CMakeLists.txt  README.md  package.xml
launch/: evaluate.launch  evaluate_triimage.launch  plot_vo.launch  test.launch
msg/: septentrio_asterx2.msg
params/cameras/calib/: 00b09d0100bec852_wide_left_8_6.yaml  00b09d0100bec852_wide_left_9_6.yaml  00b09d0100bec852_wide_left_lab.yaml  00b09d0100bec852_wide_left_old.yaml  00b09d0100bec852_wide_right_8_6.yaml  00b09d0100bec852_wide_right_9_6.yaml  00b09d0100bec852_wide_right_lab.yaml  00b09d0100bec852_wide_right_old.yaml
src/: getMatlabDataVo.cpp  getMatlabDataVoGt.cpp  writeMatlabFile.cpp  writeMatlabFile.h
